1. remove all the warnings 2. remove unsafe base64 encoder and using jdk built-in Base64 class